--- a/css/estiloCV.css
+++ b/css/estiloCV.css
@@ -6,10 +6,14 @@
 
 }
 body{
-    background-color: rgb(153, 48, 48);
+    /*background-color: rgb(255, 255, 255);*/
     font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;/*100% del viweport height alto visible util del navegador*/
+    width: 100vw;/*100% del viweport width*/
+    /*utilizar estas unidades unicamente en el body*/
+    display: flex;
 }
-header{
+/*header{
     background-color: #3bb66a;
     color: white;
     text-align: center;
@@ -17,5 +21,58 @@ header{
     margin: 0;
     width: 100%;
     height: 100px;
-    
+    }
+*/
+
+main{
+ height: 100%;
+ width: 60%;
+ background-color: #0B0C0D;
+}
+
+aside{
+    background-color: #F23041;
+    color: white;
+    width: 40%;
+    height: 100%;
+
+}
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.perfil{
+    padding: 1em;
+    width: 100%;
+   /* text-align: center;*/
+   display: grid;  /*para centrar el texto e imagen*/
+   place-items: center; /*para centrar el texto*/
+    background-color: #F25CA2;
+    .foto{
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        margin-top: 1em;
+        overflow: hidden;
+    }
+}
+
+.datosPersonales{
+    width: 100%;
+    height: 150px;
+    background-color: #3350A6;
+}
+
+.redes {
+    height: 100px;
+    width: 100%;
+    background-color: #F22222;
+}
+
+.educacion {
+    height: 200px;
+    width: 100%;
+    background-color: #3350A6;
 }
