--- a/css/estiloCV.css
+++ b/css/estiloCV.css
@@ -1,8 +1,31 @@
 /* -------------normalizar navegador-------------- */
+:root{
+    bg-rosa_cla{
+        background-color: #F294B6;
+        } 
+
+        bg-rosa_osc{
+            background-color: #734656;
+        } 
+}
+/*bg-rosa_cla{
+background-color: #F294B6;
+}
+bg-rosa_osc{
+    background-color: #734656;
+}
+bg-claro{
+    background-color: #F2EAE9;
+}
+bg-negro{
+    background-color: #0D0D0D;
+}
+*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 
 }
 body{
@@ -27,11 +50,11 @@ body{
 main{
  height: 100%;
  width: 60%;
- background-color: #0B0C0D;
+ background-color: #D9D6D0;
 }
 
 aside{
-    background-color: #F23041;
+    background-color: #D92B2B;
     color: white;
     width: 40%;
     height: 100%;
@@ -49,8 +72,9 @@ img{
    /* text-align: center;*/
    display: grid;  /*para centrar el texto e imagen*/
    place-items: center; /*para centrar el texto*/
-    background-color: #F25CA2;
+    background-color: #F25260;
     .foto{
+        border: solid 5px red;
         height: 100px;
         width: 100px;
         border-radius: 50%;
@@ -61,18 +85,37 @@ img{
 
 .datosPersonales{
     width: 100%;
-    height: 150px;
-    background-color: #3350A6;
+    background-color: #F2809F;
+    padding: 2em;
+.listaDP{
+    flex-direction: column;
+    gap: 1em;
+    margin-top: 1em;
+    li{
+        list-style: none;
+    }
+}
 }
 
 .redes {
     height: 100px;
     width: 100%;
-    background-color: #F22222;
+    background-color: #F2A0BE;
+    padding: 2em;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .educacion {
     height: 200px;
     width: 100%;
-    background-color: #3350A6;
+    background-color: #F25260;
+    padding: 2em;
+}
+/*  ordenamiento de elementos*/
+.d-flex{
+    display: flex;
+}
+.column{
+    flex-direction: column;
 }
