--- a/css/estiloCV.css
+++ b/css/estiloCV.css
@@ -1,12 +1,10 @@
 /* -------------normalizar navegador-------------- */
 :root{
-    bg-rosa_cla{
-        background-color: #F294B6;
-        } 
-
-        bg-rosa_osc{
-            background-color: #734656;
-        } 
+    --bg-rosa: #BF4974;
+    --bg-rojo: #A61420;
+    --bg-rosaClaro: #D977A5;
+    --bg-blanco: #F2F2F2;
+    --bg-negro: #0D0D0D;
 }
 /*bg-rosa_cla{
 background-color: #F294B6;
@@ -50,13 +48,13 @@ body{
 main{
  height: 100%;
  width: 60%;
- background-color: #D9D6D0;
+ background-color: var(--bg-blanco);
 }
 
 aside{
-    background-color: #D92B2B;
-    color: white;
-    width: 40%;
+    background-color: var(--bg-rosa);
+    color: var(--bg-negro);
+    width: 30%;
     height: 100%;
 
 }
@@ -67,25 +65,21 @@ img{
 }
 
 .perfil{
-    padding: 1em;
     width: 100%;
    /* text-align: center;*/
    display: grid;  /*para centrar el texto e imagen*/
    place-items: center; /*para centrar el texto*/
-    background-color: #F25260;
     .foto{
-        border: solid 5px red;
         height: 100px;
         width: 100px;
         border-radius: 50%;
-        margin-top: 1em;
         overflow: hidden;
     }
 }
 
 .datosPersonales{
+    padding-top: 1em;
     width: 100%;
-    background-color: #F2809F;
     padding: 2em;
 .listaDP{
     flex-direction: column;
@@ -98,10 +92,10 @@ img{
 }
 
 .redes {
-    height: 100px;
+    height: 150px;
     width: 100%;
     background-color: #F2A0BE;
-    padding: 2em;
+    padding: 1.5em;
     display: grid;
     gap: 1em;
     grid-template-columns: repeat(2, 1fr);
