--- a/css/estiloCV.css
+++ b/css/estiloCV.css
@@ -152,6 +152,24 @@ span{
 .column{
     flex-direction: column;
 }
+
+.box{
+    background-color: var(--bg-rosaClaro);
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    outline: 7px double var(--bg-rosaClaro);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+.iconL{
+    display: flex;
+    padding: 3em;
+    gap: 2em;
+}
 /* .contenedorFlexbox{
     display: flex;
     background-color: #F2809F;
