--- a/css/estiloCV.css
+++ b/css/estiloCV.css
@@ -105,7 +105,7 @@ img{
 
 .datosPersonales{
     width: 100%;
-    padding: 1.5em 1.5em 0.5em 1.5em;
+    padding: 1.5em 1.5em 1em 1.5em;
 .listaDP{
     flex-direction: column;
     gap: .5em;
@@ -133,7 +133,7 @@ span{
 .redes {
     height: 150px;
     width: fit-content;
-    padding: 1.5em 1.5em .5em 1.5em;
+    padding: 1.5em 1.5em 1em 1.5em;
     display: grid;
     gap: .5em;
     width: fit-content;
@@ -143,7 +143,7 @@ span{
 .educacion {
     min-height: 200px;
     width: 100%;
-    padding: 0 1.5em .5em 1.5em;
+    padding: 0 1.5em 1em 1.5em;
 }
 /*  ordenamiento de elementos*/
 .d-flex{
@@ -167,8 +167,11 @@ span{
 }
 .iconL{
     display: flex;
-    padding: 3em;
-    gap: 2em;
+    align-items: center;
+    justify-content: center;
+    gap: 3em;
+    height: 140px;
+
 }
 /* .contenedorFlexbox{
     display: flex;
