--- a/assets/css/tipografias.css
+++ b/assets/css/tipografias.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Boldonse&family=Delius&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 .nunito {
     font-family: "Nunito", sans-serif;
     font-optical-sizing: auto;
@@ -23,3 +25,9 @@
     font-style: normal;
   }
   
+.roboto-mono {
+  font-family: "Roboto Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+}
