--- a/tp01_Tarjeta/css/estiloTarjeta.css
+++ b/tp01_Tarjeta/css/estiloTarjeta.css
@@ -16,30 +16,39 @@ body{
     flex-direction: column;
     gap: 0;
     border-radius: .75em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     position: relative;
 }
 .cabecera{
     height: 300px;
     width: 300px;
-    background-color: blueviolet;
+    background-color: #C4D9BF;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2em;
+    border-radius: 20px 20px 0 0;
 }
 
 .datos{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: .2em;
+    color: #3E606F;
 }
 
 .data{
     width: 300px;
-    background-color: blanchedalmond;
+    background-color: #FCFFF5;
     height: 200px;
     text-align: center;
+    border-radius: 0 0 20px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
+
 
 .texto-blanco{
     color: #fff;
@@ -52,10 +61,11 @@ img{
     object-fit: cover;
 }
 .fotoPerfil{
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     overflow: hidden;
+    margin-bottom: 1em;
 }
 .contenedor{
     display: flex;
@@ -64,7 +74,7 @@ img{
 }
 .cuadrado   {
     height: 50px; width: 50px;
-    background-color: rgb(202, 38, 38);
+    background-color: #618C64;
     position: absolute;
     left: 275px;
     top: 150px;
@@ -75,5 +85,31 @@ img{
     color: white;
     font-size: 40px;
     font-weight: 800;
-    border: 1px solid rgb(138, 20, 20);
+
+}
+.numberData{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+#button{
+    text-decoration: none;
+    color: black;
+    background-color: #C4D9BF;
+    padding: .6em;
+    width: 150px;
+    border-radius: 20px;
+}
+
+#info{
+    text-decoration: none;
+    color: #97A4A6;
+}
+.sombra{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    position: absolute;
+    z-index: -1;
+    box-shadow: 0 0  10px rgba(216, 243, 220, .5);
 }
