--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,5 @@
-@import url(../../assets/css/tipografias.css);
+@import url(assets/css/tipografias.css);
+@import url(assets/css/fawesome-all.css);
 
 :root{
     --bg-fondo:#0D0D0D;
