--- a/tp02/css/inicioS.css
+++ b/tp02/css/inicioS.css
@@ -56,3 +56,30 @@ input{
     top: 33.1em;
     color: #8C8177;
 }
+.btn{
+    width: 474px;
+    height: 66px;
+    background-color: #D9BEA7;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    text-decoration: none;
+    color: #262223;
+    font-size: 18px;
+}
+.btn:hover{
+    background-color: #F2DFCE;
+}
+.cambiar{
+    text-align: center;
+    text-decoration: none;
+    color: #A69C94;
+    font-size: 15px;
+}
+.reg{
+    color: #594839;
+}
+#lock2{
+    top: 38.5em;
+}
