--- a/tp02/css/pp.css
+++ b/tp02/css/pp.css
@@ -12,7 +12,14 @@ main{
     background-color: #FFFFFF;
     padding: 50px 30px 50px 30px;
     gap: 27px;
+    overflow-y: auto;
 }
+
+main::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
 header{
     display: flex;
     justify-content: space-between;
@@ -64,19 +71,21 @@ span.cuotas {
     border: solid 1px #8C8177;
     border-radius: 30px;
     overflow: hidden;
+    width: 100%;
 }
 img{
     width: 100%;
     height: 100%;
+    vertical-align: middle;
 }
 .imagen{
     width: 176px;
+    flex-shrink: 0;
 }
 .contenedorProductos{
     display: flex;
     flex-direction: column;
     gap: 27px;
-    overflow: hidden;
 }
 span#logo{
     font-size: 40px;
@@ -96,4 +105,11 @@ span#cate{
 }
 i.fa-regular.fa-bars{
     width: 80px;
+}
+a{
+    text-decoration: none;
+    
+}
+.contenedorProductos article:nth-child(even) {
+    flex-direction: row-reverse;
 }
