--- a/tp02/css/detalles.css
+++ b/tp02/css/detalles.css
@@ -1,10 +1,9 @@
-@import url('../../assets/css/fawesome-all.css');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
 main{
     width: 540px;
     height: 960px;
@@ -14,15 +13,31 @@ main{
     padding: 50px 30px 50px 30px;
     gap: 27px;
     overflow-y: auto;
+    scrollbar-width: none;
 }
-
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.items{
+    display: flex;
+    gap: 2em;
+}
+span#logo{
+    font-size: 40px;
+    color: #8C8177;
+}
+.fa-cart-shopping,.fa-magnifying-glass, .fa-bars{
+    font-size: 24px;
+    color: #8C8177;
+}
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #262223;
 }
-
 .contenedorImagenes{
     padding-left: 20px;
     padding-right: 20px;
@@ -34,7 +49,6 @@ body{
         height: 666px;
     }
 }
-
 .slider{
     display: flex;
     overflow-x: auto;
@@ -76,4 +90,99 @@ body{
 }
 .slider::-webkit-scrollbar {
     display: none;
+}
+.precio{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    padding-top: 21px;
+    padding-bottom: 21px;
+}
+.detalles{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+    padding:10px 40px 10px 40px;
+}
+.circulo{
+    border: 1px solid #8C8177;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: #8C8177;
+    cursor:pointer;
+}
+.circulo:hover{
+    background-color: #F2DFCE;
+}
+.contenedorC{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+.envios{
+    font-size: 16px;
+    color: #D2C0B0;
+}
+.color{
+    color: #8C8177;
+    font-size: 20px;
+}
+.talles{
+    color: #8C8177;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.nombreP, .cuotas{
+    color: #8C8177;
+}
+.nombreP{
+    font-size: 20px;
+}
+.cuotas{
+    font-size: 16px;
+}
+.guia{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #D9BEA7;
+    gap: 10px;
+    font-size: 15px;
+}
+button{
+    background-color: #D9BEA7;
+    border: none;
+    padding: 20px;
+    width: 100%;
+    border-radius: 30px;
+    font-size: 20px;
+    color: #594839;
+}
+button:hover{
+    background-color: #F2DFCE;
+}
+.medios{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 23px 40px 23px 40px;
+}
+.medio{
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+    color: #8C8177;
+    cursor: pointer;
 }
