--- a/tp02/css/inicioS.css
+++ b/tp02/css/inicioS.css
@@ -34,6 +34,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: relative;
 }
 input{
     width: 474px;
@@ -46,14 +47,14 @@ input{
 }
 .fa-circle-user{
     position: absolute;
-    left: 29em;
-    top:27.8em;
+    left: 2em;
+    top:1.5em;
     color: #8C8177;
 }
 .fa-lock{
     position: absolute;
-    left: 29em;
-    top: 33.1em;
+    left: 2em;
+    top: 6.9em;
     color: #8C8177;
 }
 .btn{
@@ -81,5 +82,8 @@ input{
     color: #594839;
 }
 #lock2{
-    top: 38.5em;
+    position: absolute;
+    left: 2em;
+    top: 12.2em;
+    color: #8C8177;
 }
