--- a/tp01_Tarjeta/css/estiloTarjeta.css
+++ b/tp01_Tarjeta/css/estiloTarjeta.css
@@ -5,11 +5,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 body{
     background-color: #585858;
     display: grid;
     place-items: center;
+    height: 100vh;
 }
 .tarjeta{
     display: flex;
