--- a/tp02/css/inicioS.css
+++ b/tp02/css/inicioS.css
@@ -5,8 +5,9 @@
     box-sizing: border-box;
 }
 main{
-    width: 540px;
-    height: 960px;
+    max-width: 540px;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-color: #FFFFFF;
@@ -20,6 +21,8 @@ body{
     justify-content: center;
     align-items: center;
     background-color: #262223;
+    height: 100vh;
+    width: 100vw;
 }
 .logo{
     font-size: 70px;
@@ -35,9 +38,10 @@ body{
     flex-direction: column;
     gap: 20px;
     position: relative;
+    width: 100%;
 }
 input{
-    width: 474px;
+    width: 100%;
     height: 66px;
     padding-left: 60px;
     padding-right: 40px;
